# henryk-simulations

./: .copier-answers.yml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  simulation_config.json  simulation_config.yaml
.claude/: CLAUDE.md  JOURNAL.md
.github/workflows/: build.yml
docs/: biomechanics-sources.md  events_reconstruction.md  impact_analysis.md  incident_analysis.md  incident_analysis_pl.md  methodology.md
docs/medium/: the-3-second-throw-that-couldnt-happen.md
logs/: README.md
notebooks/: 01-kj-corridor-kinematics.ipynb  01b-kj-smooth-choreography.ipynb  02-kj-corridor-impact-dynamics.ipynb  03-kj-body-impact-sound.ipynb  03-kj-fem-door-modes.ipynb  03-kj-sound-reconstruction-body-thump.ipynb  04-kj-fem-torso-impact.ipynb  04-kj-sound-reconstruction-door-clang.ipynb  05-kj-acoustic-radiation.ipynb  05-kj-event-audio-augmentation.ipynb  06-kj-body-internal-compression.ipynb
notebooks/@archive/: 02-kj-acoustic-modes-synthesis.ipynb  04-kj-fem-torso-impact.ipynb  05-kj-acoustic-radiation.ipynb
references/incident/: events_reconstruction.md  geometry.md  impact_analysis.md  testimony_3rd_party.md  testimony_victim.md  (+1 more)
reports/: 01-phase-kinematics.csv  01-phase-scores.csv  corridor-plausibility.md
scripts/: build_notebook.py  build_notebook_02.py  build_notebook_03.py  build_notebook_04.py  synthesize_impact_audio.py
tests/: test_audiomix.py  test_bodyfem.py  test_choreography.py  test_corridor.py  test_data.py  test_doorfem.py  test_impact.py  test_injuries.py  test_reverb.py  test_simconfig.py  test_validation.py
(+50 files in other folders)
